// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workout Form Rendering Has Data, matches snapshot 1`] = `
<Container
  fluid="md"
>
  <Row
    className="justify-content-md-center"
  >
    <Col
      md="8"
    >
      <Card>
        <CardHeader>
          <h4>
            Exercise Information
          </h4>
        </CardHeader>
        <CardBody>
          <Form
            id="addWorkout"
            onSubmit={[Function]}
          >
            <FloatingLabel
              className="mb-3"
              controlId="floatingWorkoutDate"
              label="Workout Date"
            >
              <FormControl
                aria-label="workoutDate"
                onChange={[Function]}
                type="date"
                value={"2023-03-08T00:00:00.000Z"}
              />
            </FloatingLabel>
            <FloatingLabel
              className="mb-3"
              controlId="floatingNotes"
              label="Notes"
            >
              <FormControl
                aria-label="workoutNotes"
                as="textarea"
                onChange={[Function]}
                rows={3}
                value="Testing Notes for Testing"
              />
            </FloatingLabel>
          </Form>
        </CardBody>
      </Card>
      <Card>
        <CardHeader>
          <h4>
            Add/Edit Exercises
          </h4>
        </CardHeader>
        <CardBody>
          <ExerciseForm
            onSubmit={[Function]}
          />
        </CardBody>
      </Card>
      <Accordion
        defaultActiveKey="1"
      >
        <AccordionItem>
          <AccordionHeader>
            Exercise List
          </AccordionHeader>
          <AccordionBody>
            <ExerciseList
              exerciseList={
                Array [
                  Object {
                    "muscleGroup": "Chest",
                    "name": "Bench Press",
                    "notes": "Wrist is feeling a bit sore",
                    "setList": Array [
                      Object {
                        "reps": 20,
                        "weight": 275,
                      },
                      Object {
                        "reps": 20,
                        "weight": 300,
                      },
                      Object {
                        "reps": 3,
                        "weight": 315,
                      },
                    ],
                  },
                  Object {
                    "muscleGroup": "Shoulders",
                    "name": "Shrugs",
                    "notes": "Dumbbells",
                    "setList": Array [
                      Object {
                        "reps": 40,
                        "weight": 100,
                      },
                      Object {
                        "reps": 40,
                        "weight": 100,
                      },
                      Object {
                        "reps": 40,
                        "weight": 100,
                      },
                      Object {
                        "reps": 40,
                        "weight": 100,
                      },
                    ],
                  },
                ]
              }
              onDelete={[Function]}
            />
          </AccordionBody>
        </AccordionItem>
      </Accordion>
      <Button
        aria-label="workoutSubmit"
        form="addWorkout"
        type="submit"
        variant="outline-secondary"
      >
        Submit Workout
      </Button>
    </Col>
  </Row>
</Container>
`;

exports[`Workout Form Rendering No Data, matches snapshot 1`] = `
<Container
  fluid="md"
>
  <Row
    className="justify-content-md-center"
  >
    <Col
      md="8"
    >
      <Card>
        <CardHeader>
          <h4>
            Exercise Information
          </h4>
        </CardHeader>
        <CardBody>
          <Form
            id="addWorkout"
            onSubmit={[Function]}
          >
            <FloatingLabel
              className="mb-3"
              controlId="floatingWorkoutDate"
              label="Workout Date"
            >
              <FormControl
                aria-label="workoutDate"
                onChange={[Function]}
                type="date"
                value={"2022-02-22T05:00:00.000Z"}
              />
            </FloatingLabel>
            <FloatingLabel
              className="mb-3"
              controlId="floatingNotes"
              label="Notes"
            >
              <FormControl
                aria-label="workoutNotes"
                as="textarea"
                onChange={[Function]}
                rows={3}
                value=""
              />
            </FloatingLabel>
          </Form>
        </CardBody>
      </Card>
      <Card>
        <CardHeader>
          <h4>
            Add/Edit Exercises
          </h4>
        </CardHeader>
        <CardBody>
          <ExerciseForm
            onSubmit={[Function]}
          />
        </CardBody>
      </Card>
      <Button
        aria-label="workoutSubmit"
        form="addWorkout"
        type="submit"
        variant="outline-secondary"
      >
        Submit Workout
      </Button>
    </Col>
  </Row>
</Container>
`;
